# web-scraping

./: README.md  pyproject.toml
tests/: test_web_scraper.py
web_scraper/: scraper.py  web_scraper.py
